[tool.poetry]
name = "llm-precommiter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
flake8-annotations = "^3.1.1"
flake8-bugbear = "^24.4.26"
isort = "^5.13.2"
mypy = "^1.11.0"
pre-commit = "^3.8.0"
pyright = "^1.1.373"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
